If the system's primary IP address has changed, display a warning message and prompt to update all virtual servers on the old IP.
Virtual servers can now be backed up to the Rackspace Cloud Files service, in a similar way to Virtualmin's S3 backup support.
---- Changes since 3.94 ----
Updated the osCommerce script installer to version 2.3.3, phpBB to 3.0.11, Dolibarr to 3.2.2, SugarCRM to 6.5.5, Radiant to 1.1.0, ZenPhoto to 1.4.3.3, MediaWiki to 1.19.2, WordPress to 3.4.2, Moodle to 2.3.2, DokuWiki to 2012-10-13, OpenX to 2.8.10, Joomla to 2.5.7, Trac to 0.12.4 and 1.0, PiWik to 1.9, CMS Made Simple to 1.11.2, Z-push to 2.0.4, TikiWiki to 6.7 and 9.1, Redmine to 2.1.2, ZenCart to 1.5.1, LimeSurvey to 2.00, Movable Type to 5.2, Roundcube to 0.8.2, phpMyAdmin to 3.5.3, TWiki to 5.1.2, FengOffice to 2.2.0, and TextPattern to 4.5.2. Disabled the Mambo installer, as it appears to be no longer supported or updated. Added a script installer for OpenCart 1.5.4.1.
When running a scheduled backup from within the Virtualmin UI, pre and post backup commands are now run, and old backups purged if configured.
Added the fix-domain-quota API command, to bring Unix quotas into sync with what Virtualmin expects.
---- Changes since 3.95 ----
Updated the Typo3 script installer to version 4.6.13, CMS made simple to 1.11.2.1, Drupal to 7.17, SugarCRM to 6.5.6, PiWik to 1.9.2, FengOffice to 2.2.1, TikiWiki to 9.2, SugarCRM to 6.5.7, ZenPhoto to 1.4.3.4, Joomla to 3.0.2 and 2.5.8, phpMyFAQ to 2.7.9, Typo3 to 4.6.14, RoundCube to 0.8.4, MediaWiki to 1.20.0, Z-push to 2.0.5, phpMyAdmin to 3.5.4, Mantis to 1.2.12, dotProject to 2.1.7, and Django to 1.4.2.
Added an option to delete old mail in users' trash folder to the Spam and Virus Delivery page, similar to the existing option for deleting spam.
Server templates can now be restricted to a subset of server owners, rather than being granted to all or nothing.